--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>portfolio</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-  <link rel="icon" type="image/png" href=assets/id-card-solid.svg>
+  <link rel="icon" type="image/png" href=./assets/id-card-solid.svg>
 </head>
 <body>
   <div class="wrapper">
