--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
           <p>Im a young, self-taught programmer, and computer engineering student, Im looking to gain experience and apply my skills and knowledge in my first IT job. I have a good predisposition and Im constantly looking for challenges.</p>
           <a download href="https://drive.google.com/file/d/1o-5OmHpO5HOwbIOyOnu65mvBKtljBgJA/view?usp=sharing"><button class="download-cv">Download CV</button></a>
       </div>
-      <img src="/assets/WhatsApp Image 2022-06-13 at 16.46.58.jpeg" alt="foto cara">
+      <img src="./assets/WhatsApp Image 2022-06-13 at 16.46.58.jpeg" alt="foto cara">
     </main>
   </div>
     <div class="about">
-      <img src="/assets/codigoimagen.jpg" alt="imagenfondo">
+      <img src="./assets/codigoimagen.jpg" alt="imagenfondo">
       <div id="aboutme" class="about-info">
         <h2>About me</h2>
         <div class="divider"></div>
